bases/olympus/zephyrus/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zephyrus
  namespace: default
spec:
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      annotations:
        linkerd.io/inject: enabled
        kubectl.kubernetes.io/default-container: app
        prometheus.io/port: '9100'
        prometheus.io/scrape: 'true'
        prometheus.io/job: zephyrus
    spec:
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - podAffinityTerm:
              labelSelector:
                matchExpressions:
                - key: app
                  operator: In
                  values:
                  - zephyrus
              topologyKey: topology.kubernetes.io/zone
            weight: 100
      containers:
      - name: app
        image: binkcore.azurecr.io/zephyrus:latest
        imagePullPolicy: Always
        securityContext:
          runAsGroup: 65534
          runAsUser: 65534
      imagePullSecrets:
      - name: binkcore.azurecr.io
