bases/olympus/zephyrus/patch-labels.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: zephyrus
    component: api
  name: zephyrus
  namespace: default
spec:
  selector:
    matchLabels:
      app: zephyrus
      component: api
  template:
    metadata:
      labels:
        app: zephyrus
        component: api
        aadpodidbinding: zephyrus
