bases/olympus/zephyrus/patch-probes.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zephyrus
  namespace: default
spec:
  template:
    spec:
      containers:
        - name: app
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /livez
              port: 9000
              scheme: HTTP
            initialDelaySeconds: 15
            periodSeconds: 60
            successThreshold: 1
            timeoutSeconds: 10
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /readyz
              port: 9000
              scheme: HTTP
            initialDelaySeconds: 15
            periodSeconds: 60
            successThreshold: 1
            timeoutSeconds: 10
