bases/olympus/zephyrus/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: zephyrus
    component: api
  name: zephyrus-api
  namespace: default
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 9000
  selector:
    app: zephyrus
    component: api
  sessionAffinity: None
  type: ClusterIP
