bases/olympus/zephyrus/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: zephyrus-livez
  namespace: default
spec:
  replacePath:
    path: /livez
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: zephyrus
  namespace: default
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`api.${cluster_name}.${cluster_location}.bink.sh`) && PathPrefix(`/auth_transactions`)
      services:
        - name: zephyrus-api
          port: 80
    - kind: Rule
      match: Host(`api.${cluster_name}.${cluster_location}.bink.sh`) && Path(`/zephyrus/livez`)
      services:
        - name: zephyrus-api
          port: 80
      middlewares:
        - name: zephyrus-livez
